--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-default navbar-pie">
- 
+
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
       </button>
 
-      <a class="navbar-brand" href="#"> <img class='pull-left' src="/images/logo.svg" height="32" width="32" alt="Home" /> <span>Budget Pie</span> </a>
+      <a class="navbar-brand" href="#"> <img class='pull-left' src="/images/LOGO.svg" height="32" width="32" alt="Home" /> <span>Budget Pie</span> </a>
 
     </div>
 
