add styles to cad back

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -59,6 +59,9 @@ background-color:#8A1430!important;
   background-color: #fafafa;
 }
 
+.benefit-description {
+  color: #666;
+}
 /* FLIP CARD STYLES */
 
     .flip {
@@ -115,13 +118,12 @@ background-color:#8A1430!important;
         right: 8px;
     }
     .flipControl {
-        border: 1px solid #FFF!important;
-        background-color: rgba(187, 25, 19, 0.56)!important;
-        text-transform: lowercase;
+        text-decoration: underline;
+        text-transform: capitalize;;
 
     }
     .flipLink {
-      color: #FFF;
+
     }
 
 span.get-pie   {
@@ -134,11 +136,14 @@ span.get-pie   {
   display: inline-block;
   position: relative;
   width: 50%;
-  padding-bottom: 50%;
+  padding-bottom: 35%;
   vertical-align: middle;
   overflow: hidden;
 }
 
+.card h4 {
+  line-height: 1.5;
+}
 svg {
   display: inline-block;
   position: absolute;
