--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,11 @@
   </head>
   <body>
     <% include ./partials/navbar.ejs %>
+    <div class="container">
+      <h4 style="text-align:center; margin-top:10px">Define a Persona</h4>
+      <p style="text-align:center"> The more data, the tastier the pie!  </p>
+
+
     <form method="post" action="/">
       <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
       <div class="panel panel-default">
@@ -104,7 +109,7 @@
 
     <div id="results">
     </div>
-
+  </div>
 
 
     <footer>
