fix benefit text

--- a/public/templates/card-flip.html
+++ b/public/templates/card-flip.html
@@ -34,11 +34,11 @@
               <div class="benefit-description">
                 <div class="benefit-description">
                   <% if (benefits[1]) { %>
-                    <%= benefits[1] %>
+                    <p><%= benefits[1] %></p>
                   <% } %>
 
                   <% if (benefits[2]) { %>
-                    <%= benefits[2] %>
+                    <p><%= benefits[2] %></p>
                   <% } %>
                 </div>
               </div>
