--- a/views/partials/search-form-5.ejs
+++ b/views/partials/search-form-5.ejs
@@ -1,7 +1,9 @@
+ <!-- services-mental
+services-physical -->
 <fieldset>
   <legend>Do you, or someone in your household, use any of the following services?</legend>
-  <label for="services-mental">Mental Health Services</label>
-  <input type="checkbox" name="services" id="services-mental" value="services-mental">
-  <label for="services-physical">Services for Physical Disabilities</label>
-  <input type="checkbox" name="services" id="services-physical" value="services-physical">
+
+  <input type="checkbox" name="services" id="services-mental" value="services-mental"><label for="services-mental">Mental Health Services</label>
+<br>
+  <input type="checkbox" name="services" id="services-physical" value="services-physical">  <label for="services-physical">Services for Physical Disabilities</label>
 </fieldset>
