--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,10 @@
   <body>
     <% include ./partials/navbar.ejs %>
     <div class="container">
-      <h4 style="text-align:center; margin-top:10px">Define a Persona</h4>
+
+      <h4 style="text-align:center; margin-top:10px">
+       <span>Define a Persona</span>
+      </h4>
       <p style="text-align:center"> The more data, the tastier the pie!  </p>
 
 
@@ -21,7 +24,7 @@
         <div class="panel-heading" role="tab" id="headingOne">
           <h4 class="panel-title">
             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              Basic details
+              <span class="glyphicon glyphicon-user" aria-hidden="true" style="color:#CCC"></span> Basic details   
             </a>
           </h4>
         </div>
@@ -35,7 +38,7 @@
         <div class="panel-heading" role="tab" id="headingTwo">
           <h4 class="panel-title">
             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-              Location
+              <span class="glyphicon glyphicon-map-marker" aria-hidden="true" style="color:#CCC"></span> Location
             </a>
           </h4>
         </div>
@@ -49,7 +52,7 @@
         <div class="panel-heading" role="tab" id="headingThree">
           <h4 class="panel-title">
             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
-              Ocupation
+              <span class="glyphicon glyphicon-briefcase" aria-hidden="true" style="color:#CCC"></span> Ocupation
             </a>
           </h4>
         </div>
@@ -63,7 +66,7 @@
         <div class="panel-heading" role="tab" id="headingFour">
           <h4 class="panel-title">
             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
-              Legal status
+              <span class="glyphicon glyphicon-folder-open" aria-hidden="true" style="color:#CCC"></span> Immigration status
             </a>
           </h4>
         </div>
@@ -77,7 +80,7 @@
         <div class="panel-heading" role="tab" id="headingFive">
           <h4 class="panel-title">
             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="true" aria-controls="collapseFive">
-              Lifestyle
+              <span class="glyphicon glyphicon-heart-empty" aria-hidden="true" style="color:#CCC"></span> Health
             </a>
           </h4>
         </div>
@@ -91,7 +94,7 @@
         <div class="panel-heading" role="tab" id="headingSix">
           <h4 class="panel-title">
             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="true" aria-controls="collapseSix">
-              Ipsum Lorem
+               <span class="glyphicon glyphicon-road" aria-hidden="true" style="color:#CCC"></span> Transportation
             </a>
           </h4>
         </div>
@@ -109,6 +112,13 @@
 
     <div id="results">
     </div>
+
+  <div class="text-center">
+    <button type="button" id="more-results" class="btn btn-default"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span> More results</button>
+  </div>
+
+
+
   </div>
 
 
