add fixes to form

--- a/views/partials/search-form-1.ejs
+++ b/views/partials/search-form-1.ejs
@@ -2,11 +2,11 @@
 <fieldset>
   <legend>Gender</legend>
 
-  <input type="checkbox" name="gender-male" id="gender-male" value="gender-male"><label for="gender-male">Male</label>
+  <input type="radio" name="gender" id="gender-male" value="gender-male"><label for="gender-male">Male</label>
   <br>
-  <input type="checkbox" name="gender-female" id="gender-female" value="gender-female"><label for="gender-female">Female</label>
+  <input type="radio" name="gender" id="gender-female" value="gender-female"><label for="gender-female">Female</label>
   <br>
-  <input type="checkbox" name="gender-other" id="gender-other" value="gender-other"><label for="gender-other">Other</label>
+  <input type="radio" name="gender" id="gender-other" value="gender-other"><label for="gender-other">Other</label>
 
 
 </fieldset>
