--- a/views/partials/search-form-3.ejs
+++ b/views/partials/search-form-3.ejs
@@ -5,11 +5,11 @@
 </fieldset>
 <fieldset>
   <legend>Work Status</legend>
-  <input type="radio" name="work-self" id="work-self" value="work-self"><label for="work-self">Self Employed</label>
+  <input type="radio" name="work" id="work-self" value="work-self"><label for="work-self">Self Employed</label>
 <br>
-  <input type="radio" name="work-fulltime" id="work-fulltime" value="work-fulltime"><label for="work-fulltime">Employed: Full-Time</label>
+  <input type="radio" name="work" id="work-fulltime" value="work-fulltime"><label for="work-fulltime">Employed: Full-Time</label>
 <br>
-  <input type="radio" name="work-parttime" id="work-parttime" value="work-parttime"><label for="work-parttime">Employed: Part-Time</label>
+  <input type="radio" name="work" id="work-parttime" value="work-parttime"><label for="work-parttime">Employed: Part-Time</label>
 <br>
-  <input type="radio" name="work-unemployed" id="work-unemployed" value="work;-unemployed"><label for="work-unemployed">Unemployed</label>
+  <input type="radio" name="work" id="work-unemployed" value="work;-unemployed"><label for="work-unemployed">Unemployed</label>
 </fieldset>
