--- a/views/partials/search-form-4.ejs
+++ b/views/partials/search-form-4.ejs
@@ -1,18 +1,12 @@
-<!--
 
-immi-citizen
-immi-temporary
-immi-permanent
-
--->
 <fieldset>
   <legend>Immigration Status</legend>
 
-  <input type="radio" name="immi-citizen" id="immi-citizen" value="immi-citizen"><label for="immi-citizen">Citizen</label>
+  <input type="radio" name="immi" id="immi-citizen" value="immi-citizen"><label for="immi-citizen">Citizen</label>
 <br>
-  <input type="radio" name="immi-permanent" id="immi-permanent" value="immi-permanent"><label for="immi-permanent">Permanent Resident</label>
+  <input type="radio" name="immi" id="immi-permanent" value="immi-permanent"><label for="immi-permanent">Permanent Resident</label>
 <br>
-  <input type="radio" name="immi-temporary" id="immi-temporary" value="immi-temporary"><label for="immi-temporary">Temporary Resident</label>
+  <input type="radio" name="immi" id="immi-temporary" value="immi-temporary"><label for="immi-temporary">Temporary Resident</label>
 </fieldset>
 <fieldset>
   <legend>Are you an Indigenous Australian or Torres Straight Islander?</legend>
