--- a/public/templates/card-flip.html
+++ b/public/templates/card-flip.html
@@ -5,7 +5,7 @@
           <div class="panel panel-default">
             <div class="panel-heading">
               <h4 class="panel-title"><%= title %></h4>
-              <h5>Department of CTM</h5>
+              <h5><%= department %></h5>
             </div>
             <div class="panel-body fixed-panel">
               <div class="chart" id="<%= title.replace(/\s/g, '-') + '-1' %>"></div>
@@ -31,7 +31,7 @@
           <div class="panel panel-default">
             <div class="panel-heading">
               <h4 class="panel-title"><%= title %></h4>
-              <h5>Department of CTM</h5>
+              <h5><%= department %></h5>
             </div>
             <div class="panel-body fixed-panel">
               <div class="chart" id="<%= title.replace(/\s/g, '-') + '-2' %>"></div>
