fix data/form labels

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
         <div class="panel-heading" role="tab" id="headingOne">
           <h4 class="panel-title">
             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              <span class="glyphicon glyphicon-user" aria-hidden="true" style="color:#CCC"></span> Basic details   
+              <span class="glyphicon glyphicon-user" aria-hidden="true" style="color:#CCC"></span> Basic details
             </a>
           </h4>
         </div>
@@ -52,7 +52,7 @@
         <div class="panel-heading" role="tab" id="headingThree">
           <h4 class="panel-title">
             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
-              <span class="glyphicon glyphicon-briefcase" aria-hidden="true" style="color:#CCC"></span> Ocupation
+              <span class="glyphicon glyphicon-briefcase" aria-hidden="true" style="color:#CCC"></span> Occupation
             </a>
           </h4>
         </div>
