--- a/views/partials/search-form-1.ejs
+++ b/views/partials/search-form-1.ejs
@@ -14,6 +14,12 @@
   <fieldset>
     <legend>Ages</legend>
 
+    <input type="checkbox" name="ages-04" id="ages-04" value="ages-04"><label for="ages-04">0 - 4</label>
+    <br>
+    <input type="checkbox" name="ages-512" id="ages-512" value="ages-512"><label for="ages-512">5 - 12</label>
+    <br>
+    <input type="checkbox" name="ages-1317" id="ages-1317" value="ages-1317"><label for="ages-1317">13 - 17</label>
+    <br>
     <input type="checkbox" name="ages-1824" id="ages-1824" value="ages-1824"><label for="ages-1824">18 - 24</label>
     <br>
     <input type="checkbox" name="ages-2534" id="ages-2534" value="ages-2534"><label for="ages-2534">25 - 34</label>
@@ -39,7 +45,7 @@
   <br>
     <input type="checkbox" name="children-1318" id="children-1318" value="children-1318"><label for="children-1318">13 - 18 Years Old</label>
   <br>
-    <input type="checkbox" name="children-1920" id="children-1920" value="children-1920"><label for="children-1920">19 - 20 Years Old</label>
+    <input type="checkbox" name="children-1924" id="children-1924" value="children-1924"><label for="children-1924">19 - 24 Years Old</label>
   <br>
     <input type="checkbox" name="children-25" id="children-25" value="children-25"><label for="children-25">25+ Years Old</label>
   <br>
@@ -49,9 +55,9 @@
   <fieldset>
     <legend>Other</legend>
 
-    <input type="checkbox" name="indigenous" id="indigenous" value="indigenous"><label for="indigenous">indigenous</label>
+    <input type="checkbox" name="indigenous" id="indigenous" value="indigenous"><label for="indigenous">Indigenous Australian or Torres Straight Islander</label>
     <br>
-    <input type="checkbox" name="veteran" id="veteran" value="veteran"><label for="veteran">veteran</label>
+    <input type="checkbox" name="veteran" id="veteran" value="veteran"><label for="veteran">Military Veteran</label>
 
 
 
