add hidden/reveal to more results button

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -113,7 +113,7 @@
     <div id="results">
     </div>
 
-  <div class="text-center">
+  <div class="text-center" hidden>
     <button type="button" id="more-results" class="btn btn-default"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span> More results</button>
   </div>
 
