--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,108 +18,105 @@
       <p style="text-align:center"> The more data, the tastier the pie!  </p>
 
 
-    <form method="post" action="/">
-      <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-      <div class="panel panel-default">
-        <div class="panel-heading" role="tab" id="headingOne">
-          <h4 class="panel-title">
-            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              <span class="glyphicon glyphicon-user" aria-hidden="true" style="color:#CCC"></span> Basic details
-            </a>
-          </h4>
-        </div>
-        <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
-          <div class="panel-body">
-            <% include ./partials/search-form-1.ejs %>
+      <form method="post" action="/">
+        <div class="panel-group col-md-6 col-md-offset-3" id="accordion" role="tablist" aria-multiselectable="true">
+          <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingOne">
+              <h4 class="panel-title">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <span class="glyphicon glyphicon-user" aria-hidden="true" style="color:#CCC"></span> Basic details
+                </a>
+              </h4>
+            </div>
+            <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+              <div class="panel-body">
+                <% include ./partials/search-form-1.ejs %>
+              </div>
+            </div>
+          </div>
+          <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingTwo">
+              <h4 class="panel-title">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+                  <span class="glyphicon glyphicon-map-marker" aria-hidden="true" style="color:#CCC"></span> Location
+                </a>
+              </h4>
+            </div>
+            <div id="collapseTwo" class="panel-collapse collapse " role="tabpanel" aria-labelledby="headingTwo">
+              <div class="panel-body">
+                <% include ./partials/search-form-2.ejs %>
+              </div>
+            </div>
+          </div>
+          <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingThree">
+              <h4 class="panel-title">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
+                  <span class="glyphicon glyphicon-briefcase" aria-hidden="true" style="color:#CCC"></span> Occupation
+                </a>
+              </h4>
+            </div>
+            <div id="collapseThree" class="panel-collapse collapse " role="tabpanel" aria-labelledby="headingThree">
+              <div class="panel-body">
+                <% include ./partials/search-form-3.ejs %>
+              </div>
+            </div>
+          </div>
+          <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingFour">
+              <h4 class="panel-title">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
+                  <span class="glyphicon glyphicon-folder-open" aria-hidden="true" style="color:#CCC"></span> Immigration status
+                </a>
+              </h4>
+            </div>
+            <div id="collapseFour" class="panel-collapse collapse " role="tabpanel" aria-labelledby="headingFour">
+              <div class="panel-body">
+                <% include ./partials/search-form-4.ejs %>
+              </div>
+            </div>
+          </div>
+          <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingFive">
+              <h4 class="panel-title">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="true" aria-controls="collapseFive">
+                  <span class="glyphicon glyphicon-heart-empty" aria-hidden="true" style="color:#CCC"></span> Health
+                </a>
+              </h4>
+            </div>
+            <div id="collapseFive" class="panel-collapse collapse " role="tabpanel" aria-labelledby="headingFive">
+              <div class="panel-body">
+                <% include ./partials/search-form-5.ejs %>
+              </div>
+            </div>
+          </div>
+          <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingSix">
+              <h4 class="panel-title">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="true" aria-controls="collapseSix">
+                   <span class="glyphicon glyphicon-road" aria-hidden="true" style="color:#CCC"></span> Transportation
+                </a>
+              </h4>
+            </div>
+            <div id="collapseSix" class="panel-collapse collapse " role="tabpanel" aria-labelledby="headingSix">
+              <div class="panel-body">
+                <% include ./partials/search-form-6.ejs %>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="panel panel-default">
-        <div class="panel-heading" role="tab" id="headingTwo">
-          <h4 class="panel-title">
-            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-              <span class="glyphicon glyphicon-map-marker" aria-hidden="true" style="color:#CCC"></span> Location
-            </a>
-          </h4>
+
+        <div class="text-center">
+           <button type="submit" class="btn btn-primary">Search</button> <br><span class="get-pie">(and get pie!)</span>
         </div>
-        <div id="collapseTwo" class="panel-collapse collapse " role="tabpanel" aria-labelledby="headingTwo">
-          <div class="panel-body">
-            <% include ./partials/search-form-2.ejs %>
-          </div>
-        </div>
-      </div>
-      <div class="panel panel-default">
-        <div class="panel-heading" role="tab" id="headingThree">
-          <h4 class="panel-title">
-            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
-              <span class="glyphicon glyphicon-briefcase" aria-hidden="true" style="color:#CCC"></span> Occupation
-            </a>
-          </h4>
-        </div>
-        <div id="collapseThree" class="panel-collapse collapse " role="tabpanel" aria-labelledby="headingThree">
-          <div class="panel-body">
-            <% include ./partials/search-form-3.ejs %>
-          </div>
-        </div>
-      </div>
-      <div class="panel panel-default">
-        <div class="panel-heading" role="tab" id="headingFour">
-          <h4 class="panel-title">
-            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
-              <span class="glyphicon glyphicon-folder-open" aria-hidden="true" style="color:#CCC"></span> Immigration status
-            </a>
-          </h4>
-        </div>
-        <div id="collapseFour" class="panel-collapse collapse " role="tabpanel" aria-labelledby="headingFour">
-          <div class="panel-body">
-            <% include ./partials/search-form-4.ejs %>
-          </div>
-        </div>
-      </div>
-      <div class="panel panel-default">
-        <div class="panel-heading" role="tab" id="headingFive">
-          <h4 class="panel-title">
-            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="true" aria-controls="collapseFive">
-              <span class="glyphicon glyphicon-heart-empty" aria-hidden="true" style="color:#CCC"></span> Health
-            </a>
-          </h4>
-        </div>
-        <div id="collapseFive" class="panel-collapse collapse " role="tabpanel" aria-labelledby="headingFive">
-          <div class="panel-body">
-            <% include ./partials/search-form-5.ejs %>
-          </div>
-        </div>
-      </div>
-      <div class="panel panel-default">
-        <div class="panel-heading" role="tab" id="headingSix">
-          <h4 class="panel-title">
-            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="true" aria-controls="collapseSix">
-               <span class="glyphicon glyphicon-road" aria-hidden="true" style="color:#CCC"></span> Transportation
-            </a>
-          </h4>
-        </div>
-        <div id="collapseSix" class="panel-collapse collapse " role="tabpanel" aria-labelledby="headingSix">
-          <div class="panel-body">
-            <% include ./partials/search-form-6.ejs %>
-          </div>
+      </form>
+
+      <div id="results">
+        <div class="text-center" hidden>
+          <button type="button" id="more-results" class="btn btn-default"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span> More results</button>
         </div>
       </div>
     </div>
-       <div class="text-center">
-         <button type="submit" class="btn btn-primary">Search</button> <br><span class="get-pie">(and get pie!)</span>
-       </div>
-   </form>
-
-    <div id="results">
-    </div>
-
-  <div class="text-center" hidden>
-    <button type="button" id="more-results" class="btn btn-default"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span> More results</button>
-  </div>
-
-
-
-  </div>
 
 
     <footer>
