fix button position

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -106,7 +106,7 @@
           </div>
         </div>
 
-        <div class="text-center">
+        <div class="text-center col-xs-12">
            <button type="submit" class="btn btn-primary">Search</button> <br><span class="get-pie">(and get pie!)</span>
         </div>
       </form>
