--- a/views/index.ejs
+++ b/views/index.ejs
@@ -111,7 +111,8 @@
         </div>
       </form>
 
-      <div id="results">
+        <div id="results">
+        </div>
         <div class="text-center" hidden>
           <button type="button" id="more-results" class="btn btn-default"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span> More results</button>
         </div>
